Changed the class of the Company Reviews banner image to be used in the CSS.

--- a/reviews/company.html
+++ b/reviews/company.html
@@ -4,7 +4,7 @@ title: Company Reviews
 ---
 
 <header class="banner">
-    <div class="banner-image" style="--banner-image: url(/assets/img/banners/company-reviews/company-reviews.jpg)"></div>
+    <div class="company-reviews-banner-image" style="--banner-image: url(/assets/img/banners/company-reviews/company-reviews.jpg)"></div>
     <div class="banner-text">
         <h2>Company Reviews</h2>
     </div>
