Made some changes to the contact page text and fixed the buttons being underlined.

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@ layout: contact
 title: Contact us
 ---
 
-<h1>Contact us via our contact form</h1>
+<h1>Contact us</h1>
 
-<p>We appreciate your feedback (suggestions, questions, queries, etc.) to help us improve our site.</p>
+<p>You can contact us through our contact form or email. We appreciate your feedback (suggestions, questions, queries, etc) to help us improve the site.</p>
 
 <form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
     <p><span style="color: red">*</span> <i>Indicates required field</i></p>
