Fixed the hyperlinks on the home page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 
     <p>Go check out Seeed Studio Fusion's website below! They supply PCBs, SMT stencils, and much more with all of their convenient services like their PCB assemblies and manufacturing service. Also, their support team is very quick with email or on their social media networks, and Seeed Studio provides excellent DHL shipping for all of their products. Check out their main, PCB assembly, and PCB prototyping website with the links below:</p>
 
-    <p><a2 href="https://www.seeedstudio.com/fusion.html" target=”_blank” rel=”noopener noreferrer”>Seeed Studio Fusion</a2> – Focus on <a2 href="https://www.seeedstudio.com/fusion_pcb.html" target=”_blank” rel=”noopener noreferrer”>PCB prototyping</a2> and <a2 href="https://www.seeedstudio.com/prototype-pcb-assembly.html" target=”_blank” rel=”noopener noreferrer”>PCB assembly</a2> for more than 10 years. Only $4.90 for 10-piece PCBs up to 10×10mm.</p>
+    <p><a href="https://www.seeedstudio.com/fusion.html" target=”_blank” rel=”noopener noreferrer”><u>Seeed Studio Fusion</u></a> – Focus on <a href="https://www.seeedstudio.com/fusion_pcb.html" target=”_blank” rel=”noopener noreferrer”><u>PCB prototyping</u></a> and <a href="https://www.seeedstudio.com/prototype-pcb-assembly.html" target=”_blank” rel=”noopener noreferrer”><u>PCB assembly</u></a> for more than 10 years. Only $4.90 for 10-piece PCBs up to 10×10mm.</p>
 
     <p>You can check out my review for their service here:</p>
 
