- Reduced the text bottom margin for the grid squares. - Altered the wording & styling for the contact page. - Changed the styling of the contact form (removed placeholders).

--- a/contact.html
+++ b/contact.html
@@ -5,28 +5,25 @@ title: Contact us
 
 <h1>Contact us</h1>
 
-<p>You can contact us through our contact form or email. We appreciate your feedback (suggestions, questions, queries, etc) to help us improve the site.</p>
+<p>You can contact us through our contact form or via email. We appreciate your feedback (suggestions, questions, queries, etc) to help us improve the site.</p>
 
 <form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
     <p><span style="color: red">*</span> <i>Indicates required field</i></p>
 
    <label><p>Name <span style="color: red">*</span></p>
-       <div class="names">
-           <input type="text" name="first-name" placeholder="First name" required>
-           <input type="text" name="last-name" placeholder="Last name">
-       </div>
+           <input type="text" name="first-name" required>
    </label>
 
    <label><p>Email <span style="color: red">*</span></p>
-       <input type="email" name="email" placeholder="Email" required>
+       <input type="email" name="email" required>
    </label>
 
    <label><p>Subject</p>
-       <input type="text" name="Subject" placeholder="Subject">
+       <input type="text" name="Subject">
    </label>
 
    <label><p>Comment <span style="color: red">*</span></p>
-       <textarea name="message" placeholder="Message" style="height: 200px;" required></textarea>
+       <textarea name="message" style="height: 200px;" required></textarea>
    </label>
 
    <button type="submit">Submit</button>
