- Bolded the titles on the Company Reviews page. - Added an email anchor on the contact page. - Removed the bottom margin for the contact form labels by removing the bottom margins for the <p> tag.

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@ title: Contact us
 <h1>Contact us</h1>
 
 <p>You can contact us through our contact form or via email. We appreciate your feedback (suggestions, questions, queries, etc) to help us improve the site.</p>
+<p>Email: <a href="mailto:info.electorials@gmail.com"><u>info.electorials@gmail.com</u></a></p>
 
 <form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
     <p><span style="color: red">*</span> <i>Indicates required field</i></p>
