- Altered the contact page text. - Added a slight margin (indent) within the input boxes to the contact form. - Reduced the section border margin from 3.125rem to 3rem. - Made changes to the Arduino Setup page.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ title: Contact us
 
 <h1>Contact us</h1>
 
-<p>You can contact us through our contact form or via email. We appreciate your feedback (suggestions, questions, queries, etc) to help us improve the site.</p>
+<p>Contact us through our contact form or via email. We appreciate your feedback (suggestions, questions, queries, etc) to help improve the site.</p>
 <p>Email: <a href="mailto:info.electorials@gmail.com"><u>info.electorials@gmail.com</u></a></p>
 
 <form action="https://submit-form.com/4273PeX7_-0fXduPWu4Or" target="_self">
