--- a/projects/arduino/arduino-setup.html
+++ b/projects/arduino/arduino-setup.html
@@ -13,13 +13,13 @@ title: Arduino Setup
 <section>
     <h3>Arduino USB Connection</h3>
 
-    <p>The first step is to get a USB cable the same size as the connector port on your board, for example the Arduino Uno needs a Type-B USB data cable. The Arduino Due has two USB ports (Native USB and Programming) but needs a Micro-B USB data cable, plug your cable in either ports.</p>
+    <p>The first step is to get a USB cable that is the same size as the connector port on your board. For example, the Arduino Uno needs a Type-B USB data cable whereas the Arduino Due requires a Micro-B USB cable. The Due has two USB ports (Native USB and Programming) so plug your USB cable into either one of the two ports.</p>
 
-    <p>Connect the USB to your computer's USB port and make sure the green LED on your Arduino is blinking. Always check for any damages to the board before using the board in case they gave you a damaged board. If you don't have the right cable, you can power your board by an external power supply using a battery box with 6 AA batteries or 9 volts.</p>
+    <p>Connect the other end of the USB cable to your computer's USB port and make sure the green LED on your Arduino board is blinking. Always check for any damages to the board before using it in case you have received a damaged board. If you don't have the right cable, you can power your board by an external power supply using a battery box with 6 AA batteries or 9 volts but you will be unable to program it via computer.</p>
 
-    <p>To spot fake/counterfeit boards, <a href="https://www.arduino.cc/en/Products/Counterfeit">click here</a>.</p>
+    <p>To spot fake/counterfeit boards, click <a href="https://www.arduino.cc/en/Products/Counterfeit"><u>here</u></a>.</p>
 
-    <img src="/assets/img/arduino/ghh.png" alt="Two USB cables. One end of one cable with the Type B male end, and one end of the other cable with the micro B end">
+    <center><img src="/assets/img/arduino/ghh.png" alt="Two USB cables. One end of one cable with the Type B male end, and one end of the other cable with the micro B end"></center>
 </section>
 
 <hr>
