- Made slight padding changes to the menu items. - Reduced the grid item border size to .3 rem & the grid item padding to .2 rem.

--- a/projects/arduino/arduino-setup.html
+++ b/projects/arduino/arduino-setup.html
@@ -11,7 +11,7 @@ title: Arduino Setup
 </header>
 
 <section>
-    <h3>Arduino USB connection</h3>
+    <h3>Arduino USB Connection</h3>
 
     <p>The first step is to get a USB cable that is the same size as the connector port on your board. For example, the Arduino Uno needs a Type-B USB data cable whereas the Arduino Due requires a Micro-B USB cable. The Due has two USB ports (Native USB and Programming) so plug your USB cable into either one of the two ports.</p>
 
