- Set to 100% viewport width. - Altered some of the content on the home page.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 <!-- Introduction -->
 <section class="introduction">
 <!-- Might be best to put this in a separate about.html page. -->
-    <p>Electorials was established on March 2nd, 2017. Our goal was to provide an easy, convenient website for the Arduino community to share. We aim to be a one-stop destination for any of your electronic needs.<br>
-    Our site is non-profit making, relying completely on free web hosting and components sponsored for unbiased reviews so feel free to share our projects, tutorials and reviews. We welcome any free sponsors, comments and suggestions in order for us to improve the site's content.<br>
+    <p>Electorials was established on March 2nd, 2017 with a goal to provide an easy, convenient website for the electronics community to share.<br>
+    Our site is non-profit, relying completely on free web hosting and components sponsored for reviews. Feel free to share our projects, tutorials & reviews and we welcome any sponsors, comments or suggestions to improve the site's content.<br>
     You can contact us anytime and we will endeavour to reply back as soon as possible.</p>
 </section>
 
@@ -50,16 +50,16 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 <section class="projects-guide">
     <h2>A Guide to our Projects</h2>
 
-    <p>Our Arduino projects offer a wide variety of content for the whole community. There are projects for beginners to advanced makers. In each project, we include pictures of the real circuit working and the components. We set up our projects in this style:</p>
+    <p>Our projects offer a wide variety of content for the entire electornics community from projects suitable for beginners all the way to advanced makers. In each project, photos of the circuit functioning and all the necessary components are included. Each project is set up in this format:</p>
 
     <ol>
-        <li>Introduction - a brief explanation on important aspects of a project (materials, functions, etc.)</li>
-        <li>Circuit diagram and schematics of the project (Fritzing)</li>
-        <li>The code of the project</li>
-        <li>An explanation about the code</li>
+        <li>Introduction - a brief explanation of the project (components, function, etc.)</li>
+        <li>Circuit diagram and schematics</li>
+        <li>Project code</li>
+        <li>Explanation of the code</li>
     </ol>
 
-    <p>There might be additional content to various projects depending on whether that extra piece of information is sufficient and necessary.</p>
+    <p>Additional content may be included depending on the type of project.</p>
 
     <ul class="links">
         <li><a href="/projects/arduino">Our Arduino Projects</a></li>
@@ -73,16 +73,16 @@ blurb: Electorials is a free website for the electronics community hobbyist.
 <section class="reviews-guide">
     <h2>A Guide to our Reviews</h2>
 
-    <p>The product reviews we have on our website consists of important elements to educate somebody about the module/sensor itself. The media we put on each review include:</p>
+    <p>Our product reviews consist of important elements to showcase and comment about all aspects of the product. Each review includes:</p>
 
-    <ul>
-        <li>The product specifications and/or parts list (if necessary)</li>
-        <li>My personal product review</li>
-        <li>The pinout of that product</li>
-        <li>The sample code for that product</li>
-        <li>The product page for that item</li>
+    <ol>
+        <li>Product specifications and/or a parts list (if necessary)</li>
+        <li>Personal opinion of the product</li>
+        <li>Pinout (if necessary)</li>
+        <li>Sample code (if necessary)</li>
+        <li>Product page</li>
         <li>Other information (discount codes, link to projects, etc.)</li>
-    </ul>
+    </ol>
 
     <ul class="links">
         <li><a href="/reviews/product">Our Product Reviews</a></li>
