Made some textual changes to Arduino Setup.

--- a/projects/arduino/arduino-setup.html
+++ b/projects/arduino/arduino-setup.html
@@ -50,12 +50,12 @@ where they are already reading the site with the Arduino set-up instructions. --
     <ol>
         <li>First, open up Control Panel.</li>
         <img src="/assets/img/arduino/picture-3-for-arduino-setup.png" alt="Windows Control Panel">
-        <li>Then click on System & Security and then on System.
-        <img src="/assets/img/arduino/picture-4-for-arduino-setup.png" alt="Windows Control Panel, 'Device Manager' highlighted"></li>
-        <li>Once in System, go to Device Manager and click on Ports (COM & LGT).
-        <img src="/assets/img/arduino/picture-5-for-arduino-setup.png" alt="Device Manager, with 'Ports (COM & LPT)' highlighted and expanded to show the Arduino Uno device"></li>
-        <li>Under Ports, right click on Arduino Uno and select Update Driver Software. By clicking on that, it will take you through a process to download the appropriate driver(s) automatically.
-        <img src="/assets/img/arduino/picture-6-for-arduino-setup.png" alt="Device Manager, with right-click menu on the Arduino Uno device"></li>
+        <li>Then click on System & Security and then on System.</li>
+        <img src="/assets/img/arduino/picture-4-for-arduino-setup.png" alt="Windows Control Panel, 'Device Manager' highlighted">
+        <li>Once in System, go to Device Manager and click on Ports (COM & LGT).</li>
+        <img src="/assets/img/arduino/picture-5-for-arduino-setup.png" alt="Device Manager, with 'Ports (COM & LPT)' highlighted and expanded to show the Arduino Uno device">
+        <li>Under Ports, right click on Arduino Uno and select Update Driver Software. By clicking on that, it will take you through a process to download the appropriate driver(s) automatically.</li>
+        <img src="/assets/img/arduino/picture-6-for-arduino-setup.png" alt="Device Manager, with right-click menu on the Arduino Uno device">
         <li>During that setup process, click "No, not this time" for one of the pages.</li>
         <li>On one of the other pages, you will receive an option to "Install from a list or specific location", click that.</li>
         <li>When you get to a page asking to select a specific file, browse your files and choose the one where all your hardware is located by selecting two options from that page: "Search for the best driver in this location" and "Include this location in the search". Otherwise, select the file and continue.</li>
